# c-1

./: CMakeLists.txt
controllers/: InputController.cpp  InputController.h  SectorController.cpp  SectorController.h  SpaceShipController.cpp  SpaceShipController.h  UniverseController.cpp  UniverseController.h  main.cpp
models/: Sector.h  SpaceShip.h  Universe.h
view/: ConsoleView.cpp  ConsoleView.h
